src/homepage/navbar.css
.navbar {
    background-color: #fff;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,.25);
    font-family: nimbus-sans-condensed,sans-serif;
    text-transform: uppercase;
    font-size: .875rem;
}

.navbar-wrapper {
    height: 100px;
    display: flex;
    margin: 0 auto;
    width: 80%;
    justify-content: space-between;
    align-items: center;
}

.logo {
    width: 14%;
    margin: 0 0 0 7%;
}

.menu-wrap {
    width: 58%;
}

.menu {
    display: flex;
    justify-content: space-between;
}

.nav-link {
    text-decoration: none;
    color: #000;
}

.order-button {
    width: 13%;
    margin: 0 5% 0 0;
}

button {
    background-color:  #e31b23;
    color: #fff;
    height: 3rem;
    border-radius: 1.5rem;
    padding: 0 1rem 0 1rem;
    text-decoration: none;
    font-family: inherit;
    text-transform: inherit;
    border: none;
    outline: none;
}

@media only screen and (max-width: 1400px) {
    .navbar-wrapper {
        height: 100px;
        display: flex;
        margin: 0 auto;
        width: 100%;
        justify-content: space-between;
    }
    
    .logo {
        width: 14%;
        margin: 0 0 0 2%;
    }
    
    img {
        width: 6rem;
    }

    .menu-wrap {
        width: 62%;
    }

    .order-button {
        width: 15%;
        margin: 0 2% 0 0;
    }

    button {
        border-radius: 1.5rem;
        padding: 0 0.875rem 0 1.25rem;
    }

  }

  @media only screen and (max-width: 1023px) {

    .navbar {
        font-size: .8rem;
    }

    .navbar-wrapper {
        height: 77px;
        display: flex;
        margin: 0 auto;
        width: 100%;
        justify-content: space-between;
    }

    .logo {
        width: 13%;
        margin: 0 0 0 2%;
    }

    img {
        width: 4.5rem;
    }
    
    .menu-wrap {
        width: 65%;
        margin: 6px;
    }

    .menu {
        display: flex;
        justify-content: space-evenly;
    }

    .order-button {
        width: 16%;
        margin: 0 2% 0 0;
    }

    button {
        border-radius: 1.5rem;
        padding: 0 .5rem 0 .5rem;
        font-size: .8rem;
    }

    .nav-link {
        line-height: 1rem;
        padding: 11px;
    }

    .width {
        width: min-content;
    }
  }

